--- a/src/edpad.ui
+++ b/src/edpad.ui
@@ -14,9 +14,8 @@
     <property name="default-width">500</property>
     <property name="default-height">800</property>
     <property name="destroy-with-parent">True</property>
-    <property name="hide-titlebar-when-maximized">True</property>
     <child>
-      <object class="GtkBox">
+      <object class="GtkBox" id="1">
         <property name="visible">True</property>
         <property name="can-focus">False</property>
         <property name="orientation">vertical</property>
