--- a/src/edpad.ui
+++ b/src/edpad.ui
@@ -2,7 +2,7 @@
 <!-- Generated with glade 3.38.2 -->
 <interface>
   <requires lib="gtk+" version="3.10"/>
-  <template class="window" parent="GtkWindow">
+  <object class="GtkWindow" id="window">
     <property name="visible">True</property>
     <property name="can-focus">True</property>
     <property name="has-focus">True</property>
@@ -614,7 +614,7 @@
         </child>
       </object>
     </child>
-  </template>
+  </object>
   <object class="GtkApplicationWindow" id="quit_dialog">
     <property name="can-focus">True</property>
     <property name="can-default">True</property>
