--- a/edpad.glade
+++ b/edpad.glade
@@ -3,45 +3,56 @@
 <interface>
   <requires lib="gtk+" version="3.24"/>
   <object class="GtkTextBuffer" id="buffer1">
-    <property name="text" translatable="yes">next jump (123)
-prev jump 1
-prev jump 2</property>
+    <property name="text" translatable="yes">view1</property>
   </object>
   <object class="GtkTextBuffer" id="buffer2">
-    <property name="text" translatable="yes">current star:
-discovered:
-class
-mass
-more stars</property>
+    <property name="text" translatable="yes">view2</property>
   </object>
   <object class="GtkTextBuffer" id="buffer3">
-    <property name="text" translatable="yes">signals
-body
-nonbody
-special</property>
+    <property name="text" translatable="yes">view3</property>
   </object>
   <object class="GtkWindow" id="window">
+    <property name="name">window</property>
+    <property name="visible">True</property>
     <property name="can-focus">False</property>
+    <property name="hexpand">True</property>
+    <property name="vexpand">True</property>
+    <property name="window-position">center-always</property>
     <property name="default-width">800</property>
     <property name="default-height">600</property>
+    <property name="hide-titlebar-when-maximized">True</property>
+    <property name="gravity">center</property>
     <child>
       <object class="GtkBox">
+        <property name="name">box</property>
         <property name="visible">True</property>
         <property name="can-focus">False</property>
         <property name="orientation">vertical</property>
         <property name="spacing">2</property>
         <child>
-          <object class="GtkTextView" id="view1">
-            <property name="height-request">50</property>
+          <object class="GtkScrolledWindow">
             <property name="visible">True</property>
             <property name="can-focus">True</property>
-            <property name="vexpand">True</property>
-            <property name="editable">False</property>
-            <property name="cursor-visible">False</property>
-            <property name="buffer">buffer1</property>
-            <property name="accepts-tab">False</property>
-            <property name="input-purpose">terminal</property>
-            <property name="monospace">True</property>
+            <property name="vscrollbar-policy">always</property>
+            <property name="shadow-type">in</property>
+            <child>
+              <object class="GtkTextView" id="view1">
+                <property name="name">view1</property>
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="hexpand">True</property>
+                <property name="vexpand">True</property>
+                <property name="editable">False</property>
+                <property name="left-margin">5</property>
+                <property name="top-margin">5</property>
+                <property name="bottom-margin">5</property>
+                <property name="cursor-visible">False</property>
+                <property name="buffer">buffer1</property>
+                <property name="accepts-tab">False</property>
+                <property name="input-purpose">terminal</property>
+                <property name="monospace">True</property>
+              </object>
+            </child>
           </object>
           <packing>
             <property name="expand">True</property>
@@ -50,12 +61,30 @@ special</property>
           </packing>
         </child>
         <child>
-          <object class="GtkTextView" id="view2">
-            <property name="height-request">-1</property>
+          <object class="GtkScrolledWindow">
+            <property name="height-request">700</property>
             <property name="visible">True</property>
             <property name="can-focus">True</property>
-            <property name="vexpand">True</property>
-            <property name="buffer">buffer2</property>
+            <property name="vscrollbar-policy">always</property>
+            <property name="shadow-type">in</property>
+            <child>
+              <object class="GtkTextView" id="view2">
+                <property name="name">view2</property>
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="hexpand">True</property>
+                <property name="vexpand">True</property>
+                <property name="editable">False</property>
+                <property name="left-margin">25</property>
+                <property name="top-margin">5</property>
+                <property name="bottom-margin">5</property>
+                <property name="cursor-visible">False</property>
+                <property name="buffer">buffer2</property>
+                <property name="accepts-tab">False</property>
+                <property name="input-purpose">terminal</property>
+                <property name="monospace">True</property>
+              </object>
+            </child>
           </object>
           <packing>
             <property name="expand">True</property>
@@ -64,12 +93,31 @@ special</property>
           </packing>
         </child>
         <child>
-          <object class="GtkTextView" id="view3">
-            <property name="height-request">100</property>
+          <object class="GtkScrolledWindow">
             <property name="visible">True</property>
             <property name="can-focus">True</property>
-            <property name="vexpand">True</property>
-            <property name="buffer">buffer3</property>
+            <property name="vscrollbar-policy">always</property>
+            <property name="window-placement">bottom-left</property>
+            <property name="shadow-type">in</property>
+            <property name="overlay-scrolling">False</property>
+            <child>
+              <object class="GtkTextView" id="view3">
+                <property name="name">view3</property>
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="hexpand">True</property>
+                <property name="vexpand">True</property>
+                <property name="editable">False</property>
+                <property name="left-margin">5</property>
+                <property name="top-margin">5</property>
+                <property name="bottom-margin">5</property>
+                <property name="cursor-visible">False</property>
+                <property name="buffer">buffer3</property>
+                <property name="accepts-tab">False</property>
+                <property name="input-purpose">terminal</property>
+                <property name="monospace">True</property>
+              </object>
+            </child>
           </object>
           <packing>
             <property name="expand">True</property>
