--- a/edpad.glade
+++ b/edpad.glade
@@ -2,15 +2,11 @@
 <!-- Generated with glade 3.38.2 -->
 <interface>
   <requires lib="gtk+" version="3.24"/>
-  <object class="GtkTextBuffer" id="buffer1">
-    <property name="text" translatable="yes">view1</property>
-  </object>
+  <object class="GtkTextBuffer" id="buffer1"/>
   <object class="GtkTextBuffer" id="buffer2">
-    <property name="text" translatable="yes">view2</property>
+    <property name="text" translatable="yes">Hello, commander!</property>
   </object>
-  <object class="GtkTextBuffer" id="buffer3">
-    <property name="text" translatable="yes">view3</property>
-  </object>
+  <object class="GtkTextBuffer" id="buffer3"/>
   <object class="GtkWindow" id="window">
     <property name="name">window</property>
     <property name="visible">True</property>
@@ -18,8 +14,8 @@
     <property name="hexpand">True</property>
     <property name="vexpand">True</property>
     <property name="window-position">center-always</property>
-    <property name="default-width">800</property>
-    <property name="default-height">600</property>
+    <property name="default-width">1280</property>
+    <property name="default-height">800</property>
     <property name="gravity">center</property>
     <child>
       <object class="GtkBox" id="box">
@@ -33,16 +29,23 @@
             <property name="name">scroll1</property>
             <property name="visible">True</property>
             <property name="can-focus">True</property>
+            <property name="hscrollbar-policy">never</property>
             <property name="vscrollbar-policy">always</property>
             <property name="window-placement">bottom-left</property>
+            <property name="kinetic-scrolling">False</property>
             <property name="overlay-scrolling">False</property>
+            <property name="max-content-width">2000</property>
+            <property name="max-content-height">2000</property>
             <child>
               <object class="GtkTextView" id="view1">
                 <property name="name">view1</property>
                 <property name="visible">True</property>
-                <property name="can-focus">True</property>
+                <property name="sensitive">False</property>
+                <property name="can-focus">False</property>
                 <property name="hexpand">True</property>
                 <property name="vexpand">True</property>
+                <property name="hscroll-policy">natural</property>
+                <property name="vscroll-policy">natural</property>
                 <property name="editable">False</property>
                 <property name="left-margin">5</property>
                 <property name="top-margin">5</property>
@@ -64,19 +67,26 @@
         <child>
           <object class="GtkScrolledWindow" id="scroll2">
             <property name="name">scroll2</property>
-            <property name="height-request">500</property>
+            <property name="height-request">350</property>
             <property name="visible">True</property>
             <property name="can-focus">True</property>
+            <property name="hscrollbar-policy">never</property>
             <property name="vscrollbar-policy">always</property>
             <property name="window-placement">bottom-left</property>
+            <property name="kinetic-scrolling">False</property>
             <property name="overlay-scrolling">False</property>
+            <property name="max-content-width">2000</property>
+            <property name="max-content-height">2000</property>
             <child>
               <object class="GtkTextView" id="view2">
                 <property name="name">view2</property>
                 <property name="visible">True</property>
-                <property name="can-focus">True</property>
+                <property name="sensitive">False</property>
+                <property name="can-focus">False</property>
                 <property name="hexpand">True</property>
                 <property name="vexpand">True</property>
+                <property name="hscroll-policy">natural</property>
+                <property name="vscroll-policy">natural</property>
                 <property name="editable">False</property>
                 <property name="left-margin">25</property>
                 <property name="top-margin">5</property>
@@ -100,16 +110,23 @@
             <property name="name">scroll3</property>
             <property name="visible">True</property>
             <property name="can-focus">True</property>
+            <property name="hscrollbar-policy">never</property>
             <property name="vscrollbar-policy">always</property>
             <property name="window-placement">bottom-left</property>
+            <property name="kinetic-scrolling">False</property>
             <property name="overlay-scrolling">False</property>
+            <property name="max-content-width">2000</property>
+            <property name="max-content-height">2000</property>
             <child>
               <object class="GtkTextView" id="view3">
                 <property name="name">view3</property>
                 <property name="visible">True</property>
-                <property name="can-focus">True</property>
+                <property name="sensitive">False</property>
+                <property name="can-focus">False</property>
                 <property name="hexpand">True</property>
                 <property name="vexpand">True</property>
+                <property name="hscroll-policy">natural</property>
+                <property name="vscroll-policy">natural</property>
                 <property name="editable">False</property>
                 <property name="left-margin">5</property>
                 <property name="top-margin">5</property>
@@ -129,9 +146,6 @@
           </packing>
         </child>
       </object>
-    </child>
-    <child type="titlebar">
-      <placeholder/>
     </child>
   </object>
 </interface>
