--- a/resources/edpad.css
+++ b/resources/edpad.css
@@ -2,44 +2,30 @@
     background-image: url('/home/vesemir/.local/share/edpad/edpad.png');
 }
 
-#scroll1 {
+#scroll {
     background: alpha (@base_color, 0.0);
 }
 
-#scroll2 {
-    background: alpha (@base_color, 0.0);
-}
-
-#scroll3 {
-    background: alpha (@base_color, 0.0);
-}
-
-
-#view1 {
+#textview {
     font-size: 24px;
     background: alpha (@base_color, 0.0);
 }
-#view1 text {
+
+#textview text {
     color: #8080FF;
     background: alpha (@base_color, 0.0);
 }
 
-#view2 {
-    font-size: 26px;
-    background: alpha (@base_color, 0.0);
-}
-#view2 text {
-    color: #50FF50;
-    background: alpha (@base_color, 0.0);
-}
 
-#view3 {
-    font-size: 24px;
+/*
+#paned1,
+#paned2,
+#paned3,
+#paned4,
+#grid1,
+#grid2,
+#bbox1,
+#bbox2 {
     background: alpha (@base_color, 0.0);
 }
-#view3 text {
-    color: #FFFF70;
-    background: alpha (@base_color, 0.0);
-}
-
-
+*/
