--- a/resources/edpad.glade
+++ b/resources/edpad.glade
@@ -8,9 +8,12 @@
   <object class="GtkApplicationWindow" id="window">
     <property name="name">window</property>
     <property name="can-focus">False</property>
+    <property name="hexpand">True</property>
+    <property name="vexpand">True</property>
     <property name="default-width">1280</property>
     <property name="default-height">800</property>
     <property name="gravity">center</property>
+    <property name="show-menubar">False</property>
     <child>
       <object class="GtkPaned" id="paned1">
         <property name="name">paned1</property>
