--- a/resources/edpad.css
+++ b/resources/edpad.css
@@ -1,44 +1,17 @@
 #window {
-    background-image: url('/home/user/.local/share/edpad/edpad.png');
+    background-image: url('/home/vesemir/.local/share/edpad/edpad.png');
 }
 
-#scroll1 {
-    background: alpha (@base_color, 0.0);
-}
-
-#scroll2 {
-    background: alpha (@base_color, 0.0);
-}
-
-#scroll3 {
-    background: alpha (@base_color, 0.0);
-}
-
-
-#view1 {
-    font-size: 20px;
-    background: alpha (@base_color, 0.0);
-}
-#view1 text {
-    color: #AAAA50;
-    background: alpha (@base_color, 0.0);
-}
-
-#view2 {
+#view {
     font-size: 22px;
     background: alpha (@base_color, 0.0);
 }
-#view2 text {
+#view text {
     color: #50FF50;
     background: alpha (@base_color, 0.0);
 }
 
-#view3 {
-    font-size: 20px;
-    background: alpha (@base_color, 0.0);
-}
-#view3 text {
-    color: #4040FF;
+* {
     background: alpha (@base_color, 0.0);
 }
 
