--- a/resources/edpad.css
+++ b/resources/edpad.css
@@ -1,5 +1,5 @@
 window {
-    background-image: url('/home/vesemir/src/edpad/src/edpad/resources/edpad-1280-800.png');
+    background-image: url('/home/user/.local/share/edpad/edpad.png');
     background-repeat: no-repeat;
     background-position: center;
 }
